# eclipse

./: CMakeLists.txt  README.md  build_and_test.bat  build_and_test.sh
cmake/: EclipseConfig.cmake.in  eclipse.pc.in
examples/: CMakeLists.txt  main.cpp
include/Eclipse/: LogMacros.h  Logger.h  Macros.h
src/: Logger.cpp
tests/: CMakeLists.txt  README.md  demo.env  demo.ini  test_advanced_features.cpp  test_basic_logging.cpp  test_config_edge_cases.cpp  test_config_file_logging.cpp  test_logger.cpp  test_multithreaded_logging.cpp  test_thread_safety.cpp
